--- a/index.html
+++ b/index.html
@@ -12,18 +12,19 @@
         <button class="square" onclick="write_number(7)">7</button>
         <button class="square" onclick="write_number(8)">8</button>
         <button class="square" onclick="write_number(9)">9</button>
-        <button class="square" onclick="write_operator('*')">&times;</button>
+        <button class="square" id="*" onclick="write_operator('*')">&times;</button>
         <button class="square" onclick="write_number(4)">4</button>
         <button class="square" onclick="write_number(5)">5</button>
         <button class="square" onclick="write_number(6)">6</button>
-        <button class="square" onclick="write_operator('/')">&divide;</button>
+        <button class="square" id="/" onclick="write_operator('/')">&divide;</button>
         <button class="square" onclick="write_number(1)">1</button>
         <button class="square" onclick="write_number(2)">2</button>
         <button class="square" onclick="write_number(3)">3</button>
-        <button class="square" onclick="write_operator('-')">-</button>
-        <button class="square" onclick="write_number(0)">0</button>
+        <button class="square" id="-" onclick="write_operator('-')">-</button>
+        <button class="square" style="grid-column: 1 / 3;" onclick="write_number(0)">0</button>
         <button class="square" onclick="write_number('.')">.</button>
-        <button class="square" onclick="write_operator('+')">+</button>
+        <button class="square" id="+" onclick="write_operator('+')">+</button>
+        <button class="square red" onclick="clean()">CA</button>
         <button class="square orange" onclick="calc()">=</button>
     </main>
     <script src="script.js"></script>
